# TempStorage

AVT Window Load test wait/: readme.txt
AVT speed profiler/: Instrument.php  InterpretResult.php  Readme.txt  extract.bat
BLF-C#WPF/: About.xaml  About.xaml.cs  AbsenceManage.cs  AbsenceManageEdit.xaml  AbsenceManageEdit.xaml.cs  AbsenceManageView.xaml  AdminChangePassw.xaml  AdminChangePassw.xaml.cs  AdminLogin.xaml  AdminLogin.xaml.cs  App.xaml  App.xaml.cs  BLFClient.csproj  BLFClient.sln  BLFClient_TemporaryKey.pfx  BLFServerConfig.xaml  BLFServerConfig.xaml.cs  GridContentArea.xaml  GridContentArea.xaml.cs  IndexCard.xaml  IndexCard.xaml.cs  IndexCardRename.xaml  IndexCardRename.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PhoneNumber.xaml  PhoneNumber.xaml.cs  PhoneNumberNew.xaml  PhoneNumberNew.xaml.cs  PhoneNumberNewRange.xaml  PhoneNumberNewRange.xaml.cs  PhoneNumberPrefixEdit.xaml  PhoneNumberPrefixEdit.xaml.cs  PhoneNumberSizeEdit.xaml  PhoneNumberSizeEdit.xaml.cs  StatusColorEditor.xaml  StatusColorEditor.xaml.cs
BooleanParser/: boolean_parser.c  boolean_parser.h  boolean_parser.sln  boolean_parser.vcxproj  main.c
BuddyAllocator/: BuddyAllocator.vcxproj  main.c
C#FlowerSellerEx/: BucketBuilder.cs  ConfigHandler.cs  Flower.cs  FlowerSeller.sln  Program.cs  Readme.txt  SalesReport.cs
C#WPF/: About.xaml  About.xaml.cs  AbsenceManageEdit.xaml  AbsenceManageEdit.xaml.cs  AbsenceManageSelectOutlook.xaml  AbsenceManageSelectOutlook.xaml.cs  AbsenceManageView.xaml  AbsenceManageView.xaml.cs  (+41 more)
PortSinkToSQS/: CMakeLists.txt  README.md  portsinkSQS.cpp
(+2059 files in other folders)
